# Video-Motion-Detect

./: CMakeLists.txt  README.md  install.sh  main.cpp  test.sh
src/: Fastflow_a.cpp  Fastflow_b.cpp  Sequential.cpp  ThreadFarm.cpp  Utils.cpp  Utimer.cpp  Videodetect.cpp
